<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shap_dialog"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/d10"
        android:text="@string/please_change_bonus"
        android:textColor="@android:color/white"
        android:textSize="@dimen/txt_20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_change_bonus_value"
        style="@style/text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorTextAppearance="@style/error_appearance">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/text_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bonus_value"
            android:inputType="number|numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <Button
        android:id="@+id/dialog_button_change"
        style="@style/btn"
        android:layout_width="@dimen/d100"
        android:layout_height="@dimen/d30"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/d4"
        android:text="@string/change"
        android:textStyle="bold" />
    <Button
        android:id="@+id/dialog_button_cancel"
        style="@style/btn"
        android:layout_width="@dimen/d100"
        android:layout_height="@dimen/d30"
        android:layout_gravity="center"
        android:text="@string/cancel"
        android:textStyle="bold" />
</LinearLayout>
</LinearLayout>